@@ -28,7 +28,9 @@ libxfpm/hal-marshal.c
 libxfpm/hal-manager.c
 libxfpm/hal-power.c
 libxfpm/hal-battery.c
-panel-plugins/brightness/main.c
-src/xfce-power-manager.desktop.in
-settings/xfce4-power-manager.desktop.in
+panel-plugins/brightness/brightness-plugin.c
 panel-plugins/brightness/xfce4-brightness-plugin.desktop.in.in
+panel-plugins/inhibit/inhibit-plugin.c
+panel-plugins/inhibit/xfce4-inhibit-plugin.desktop.in.in
+src/xfce4-power-manager.desktop.in
+settings/xfce4-power-manager.desktop.in
