@@ -1,4 +1,7 @@
 
+2009-03-22 20:23 Ali aliov@xfce.org 
+	 * : Provide a dbus interface to syncronize the brightness plugin and xfpm+update POTFILES
+
 2009-03-22 19:02 Ali aliov@xfce.org 
 	 * : React correctly when panel orientation changed
 
